# mycelium

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  netlify.toml  pyproject.toml  requirements.txt
antigrav_dashboard/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
benchmarks/: README.md  RESULTS.md
benchmarks/reports/: benchmark_report_template.md
benchmarks/scripts/: build_synthetic_agents.py  build_synthetic_queries.py  load_benchmark.py  run_discovery_benchmark.py  run_fair_benchmark.py  run_semantic_benchmark.py  utils.py
bridge/: __init__.py  translator.py
core/: chain.py
docs/: api-reference.md  architecture.md  faq.md  getting-started.md  protocol-spec.md
examples/agents/: code_review_agent.py  math_agent.py  summarizer_agent.py  translator_agent.py  weather_agent.py
examples/real_agents/: real_crypto_agent.py  real_currency_agent.py  real_translator_agent.py  real_weather_agent.py  real_wikipedia_agent.py
examples/tutorials/: 01_first_agent.py  02_discover_agents.py
mycelium/: __init__.py
mycelium/cli/: __init__.py
mycelium/core/: __init__.py  agent.py  capability.py  card.py  errors.py  message.py
mycelium/discovery/: __init__.py  semantic.py
mycelium/network/: __init__.py  client.py
mycelium/protocol/: __init__.py
mycelium/trust/: __init__.py
ontology/: __init__.py  capabilities.py
reports/: diagnostic_20260401_224203.json  diagnostic_20260402_112013.json  diagnostic_20260407_173855.json  real_world_demo_20260403_134027.json  real_world_demo_20260403_134429.json  real_world_demo_20260403_134814.json  real_world_demo_20260407_174455.json
scripts/: convert_to_mp4.py  debug_ffmpeg.py  real_world_demo.py  system_check.py  test_semantic.py
security/: __init__.py  auth.py
server/: __init__.py  app.py
server/models/: __init__.py  database.py
tests/: test_agent.py
trust/: engine.py
(+15 files in other folders)
