[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mycelium-ai"
version = "0.1.0"
description = "The networking protocol for AI agents. Discover, communicate, and collaborate."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["ai", "agents", "protocol", "networking", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "uuid7>=0.1.0",
    "cryptography>=41.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "aiosqlite>=0.19.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mycelium"
Documentation = "https://mycelium.dev"
Repository = "https://github.com/yourusername/mycelium"
Issues = "https://github.com/yourusername/mycelium/issues"

[project.scripts]
mycelium = "mycelium.cli.main:app"

[tool.setuptools.packages.find]
include = ["mycelium*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100